[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/NamedEnemyParamsIdOptionButton.gd" type="Script" id=1]
[ext_resource path="res://UI/HmPresetNoOptionButton.gd" type="Script" id=2]
[ext_resource path="res://UI/EnemyDetailsPanel.gd" type="Script" id=3]

[node name="EnemyDetailsPanel" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1016.0
margin_bottom = 458.0
size_flags_horizontal = 3

[node name="NamedEnemyParamsIdOptionButton" type="OptionButton" parent="VBoxContainer"]
margin_right = 1016.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "- Default name -"
items = [ "- Default name -", null, false, 2298, null ]
selected = 0
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1016.0
margin_bottom = 458.0
columns = 2

[node name="RaidBossId" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 23.0
text = "RaidBossId"

[node name="RaidBossIdLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_right = 1016.0
margin_bottom = 28.0
hint_tooltip = "RaidBossId_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="Scale" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 55.0
text = "Scale"

[node name="ScaleLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 32.0
margin_right = 1016.0
margin_bottom = 60.0
hint_tooltip = "Scale_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="Level" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 87.0
text = "Level"

[node name="LevelLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 64.0
margin_right = 1016.0
margin_bottom = 92.0
hint_tooltip = "Level_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="HmPresetNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 99.0
margin_right = 120.0
margin_bottom = 117.0
text = "HmPresetNo"

[node name="HmPresetNoOptionButton" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 96.0
margin_right = 1016.0
margin_bottom = 120.0
hint_tooltip = "HmPresetNo_tooltip"
size_flags_horizontal = 3
text = "- None -"
items = [ "- None -", null, false, 0, null ]
selected = 0
script = ExtResource( 2 )

[node name="StartThinkTblNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 129.0
margin_right = 120.0
margin_bottom = 147.0
text = "StartThinkTblNo"

[node name="StartThinkTblNoLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 124.0
margin_right = 1016.0
margin_bottom = 152.0
hint_tooltip = "StartThinkTblNo_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="RepopNum" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 161.0
margin_right = 120.0
margin_bottom = 179.0
text = "RepopNum"

[node name="RepopNumLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 156.0
margin_right = 1016.0
margin_bottom = 184.0
hint_tooltip = "RepopNum_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="RepopCount" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 193.0
margin_right = 120.0
margin_bottom = 211.0
text = "RepopCount"

[node name="RepopCountLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 188.0
margin_right = 1016.0
margin_bottom = 216.0
hint_tooltip = "RepopCount_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="EnemyTargetTypesId" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 225.0
margin_right = 120.0
margin_bottom = 243.0
text = "EnemyTargetTypesId"

[node name="EnemyTargetTypesIdLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 220.0
margin_right = 1016.0
margin_bottom = 248.0
hint_tooltip = "EnemyTargetTypesId_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="MontageFixNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 257.0
margin_right = 120.0
margin_bottom = 275.0
text = "MontageFixNo"

[node name="MontageFixNoLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 252.0
margin_right = 1016.0
margin_bottom = 280.0
hint_tooltip = "MontageFixNo_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="SetType" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 289.0
margin_right = 120.0
margin_bottom = 307.0
text = "SetType"

[node name="SetTypeLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 284.0
margin_right = 1016.0
margin_bottom = 312.0
hint_tooltip = "SetType_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="InfectionType" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 319.0
margin_right = 120.0
margin_bottom = 337.0
text = "InfectionType"

[node name="InfectionTypeLineEdit" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 316.0
margin_right = 1016.0
margin_bottom = 340.0
hint_tooltip = "InfectionType_tooltip"
size_flags_horizontal = 3
text = "InfectionType_value_0"
items = [ "InfectionType_value_0", null, false, 0, null, "InfectionType_value_1", null, false, 1, null, "InfectionType_value_2", null, false, 2, null, "InfectionType_value_3", null, false, 3, null ]
selected = 0

[node name="IsBossGauge" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_top = 344.0
margin_right = 120.0
margin_bottom = 370.0
hint_tooltip = "IsBossGauge_tooltip"
text = "IsBossGauge"

[node name="IsBossBGM" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 344.0
margin_right = 1016.0
margin_bottom = 370.0
hint_tooltip = "IsBossBGM_tooltip"
text = "IsBossBGM"

[node name="IsManualSet" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_top = 374.0
margin_right = 120.0
margin_bottom = 400.0
hint_tooltip = "IsManualSet_tooltip"
text = "IsManualSet"

[node name="IsAreaBoss" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 374.0
margin_right = 1016.0
margin_bottom = 400.0
hint_tooltip = "IsAreaBoss_tooltip"
text = "IsAreaBoss"

[node name="IsBloodEnemy" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_top = 404.0
margin_right = 120.0
margin_bottom = 430.0
hint_tooltip = "IsBloodEnemy_tooltip"
text = "IsBloodEnemy"

[node name="IsHighOrbEnemy" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 404.0
margin_right = 1016.0
margin_bottom = 430.0
hint_tooltip = "IsHighOrbEnemy_tooltip"
text = "IsHighOrbEnemy"

[connection signal="item_selected" from="VBoxContainer/NamedEnemyParamsIdOptionButton" to="." method="_on_NamedEnemyParamsIdOptionButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RaidBossIdLineEdit" to="." method="_on_RaidBossIdLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ScaleLineEdit" to="." method="_on_ScaleLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/LevelLineEdit" to="." method="_on_LevelLineEdit_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/HmPresetNoOptionButton" to="." method="_on_HmPresetNoOptionButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/StartThinkTblNoLineEdit" to="." method="_on_StartThinkTblNoLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RepopNumLineEdit" to="." method="_on_RepopNumLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RepopCountLineEdit" to="." method="_on_RepopCountLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/EnemyTargetTypesIdLineEdit" to="." method="_on_EnemyTargetTypesIdLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/MontageFixNoLineEdit" to="." method="_on_MontageFixNoLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/SetTypeLineEdit" to="." method="_on_SetTypeLineEdit_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/InfectionTypeLineEdit" to="." method="_on_InfectionTypeLineEdit_item_selected"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsBossGauge" to="." method="_on_IsBossGauge_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsBossBGM" to="." method="_on_IsBossBGM_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsManualSet" to="." method="_on_IsManualSet_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsAreaBoss" to="." method="_on_IsAreaBoss_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsBloodEnemy" to="." method="_on_IsBloodEnemy_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsHighOrbEnemy" to="." method="_on_IsHighOrbEnemy_pressed"]
